# test_use_lib

./: .gitignore  Makefile.am  README.md  configure.ac
example/include/: example.h
example/src/: Makefile.am  example  example.cpp
libtl/: hello.h  libtl.h
libtl/include/: hello.h  libtl.h
libtl/src/: Makefile.am  hello.cpp
wlib/include/: wlib.h
wlib/src/: Makefile.am  wlib.cpp
